# traj_distill

./: README.md  project_additions.txt  pyproject.toml
configs/: distill.example.toml  distill.prompt.example.txt  request.example.toml  server.example.toml
data/constructed/: context_target_v1_train_sample.jsonl
data/resolved_trajectories_openai__Qwen__Qwen3-Coder-30B-A3B-Instruct.eval_default/: astropy__astropy-14995__astropy__astropy-14995.traj.json  django__django-11039__django__django-11039.traj.json  django__django-11099__django__django-11099.traj.json  django__django-11179__django__django-11179.traj.json  django__django-11583__django__django-11583.traj.json  django__django-11999__django__django-11999.traj.json  django__django-12286__django__django-12286.traj.json  django__django-12453__django__django-12453.traj.json  django__django-13028__django__django-13028.traj.json  django__django-13158__django__django-13158.traj.json  django__django-13925__django__django-13925.traj.json  django__django-14238__django__django-14238.traj.json  django__django-14411__django__django-14411.traj.json  django__django-14608__django__django-14608.traj.json  django__django-14672__django__django-14672.traj.json  django__django-14855__django__django-14855.traj.json  django__django-14915__django__django-14915.traj.json  django__django-15789__django__django-15789.traj.json  django__django-15814__django__django-15814.traj.json  django__django-15851__django__django-15851.traj.json  django__django-16046__django__django-16046.traj.json  (+31 more)
notebooks/: construct_dataset_v1.ipynb
(+5 files in other folders)
